--- a/_upkg/install
+++ b/_upkg/install
@@ -28,7 +28,7 @@ pr_info "Updating bundles..."
 echo "y\ny\ny\n" | nvim +'NeoBundleInstall!<\CR>' +'q'
 wait
 
-source buildycm.sh
+# source buildycm.sh
 
 pr_info "Building vimproc .so..."
 cd ~/.nvim/bundle/vimproc
