--- a/_upkg/install
+++ b/_upkg/install
@@ -28,11 +28,11 @@ pr_info "Updating bundles..."
 echo "y\ny\ny\n" | nvim +'NeoBundleInstall!<\CR>' +'q'
 wait
 
-source buildycm.sh
+# source buildycm.sh
 
-pr_info "Building vimproc .so..."
-cd ~/.nvim/bundle/vimproc
-make
-cd -
+# pr_info "Building vimproc .so..."
+# cd ~/.nvim/bundle/vimproc
+# make
+# cd -
 
 pr_pass "Install complete"
