Register remote plugins after install/update. Also, build the latest tagged version instead of master if possible.

--- a/_upkg/install
+++ b/_upkg/install
@@ -33,6 +33,10 @@ pr_info "Updating bundles..."
 echo "y\ny\ny\n" | nvim -c 'NeoBundleInstall!<\CR>' -c 'q'
 wait
 
+pr_info "Updating Remote Plugins..."
+nvim -c "UpdateRemotePlugins" -c "qa"
+wait
+
 source buildycm.sh
 
 # pr_info "Building vimproc .so..."
