Trying out new markdown plugin

--- a/_upkg/install
+++ b/_upkg/install
@@ -34,4 +34,8 @@ pr_info "Updating Remote Plugins..."
 nvim -c "UpdateRemotePlugins<\CR>" -c "qa!"
 wait
 
+pr_info "Installing instant markdown via npm..."
+sudo npm -g install instant-markdown-d
+waite
+
 pr_pass "Install complete"
