--- a/_upkg/install
+++ b/_upkg/install
@@ -30,8 +30,22 @@ wait
 # nvim -c "UpdateRemotePlugins<\CR>" -c "qa!"
 # wait
 
-pr_info "Installing instant markdown via npm..."
-npm install -g instant-markdown-d
-wait
+# pr_info "Installing instant markdown via npm..."
+# npm install -g instant-markdown-d
+# wait
+
+pr_info "Installing Coc plugins ..."
+CocPlugins="coc-ultisnips coc-python coc-json coc-javascript \
+    coc-tslint coc-eslint coc-css coc-sources coc-neco \
+    coc-tsserver coc-git coc-yank coc-svg coc-vimlsp coc-xml \
+    coc-tabnine coc-highlight coc-java coc-neoinclude"
+
+for coc in $CocPlugins ; do
+    pr_info "\tInstalling Coc plugin $coc"
+    nvim +"CocInstall $coc" +qa
+done
+
+pr_info "Updating Black ..."
+nvim +BlackUpgrade +qa
 
 pr_pass "Install complete"
