--- a/_upkg/install
+++ b/_upkg/install
@@ -23,7 +23,7 @@ source buildycm.sh
 wait
 
 pr_info "Updating plugs..."
-nvim +PlugInstall +UpdateRemotePlugins +qa
+nvim --headless +PlugInstall +UpdateRemotePlugins +qa
 wait
 
 # pr_info "Updating Remote Plugins..."
@@ -38,14 +38,14 @@ pr_info "Installing Coc plugins ..."
 CocPlugins="coc-ultisnips coc-python coc-json coc-javascript \
     coc-tslint coc-eslint coc-css coc-sources coc-neco \
     coc-tsserver coc-git coc-yank coc-svg coc-vimlsp coc-xml \
-    coc-tabnine coc-highlight coc-java coc-neoinclude"
+    coc-tabnine coc-highlight coc-java coc-neoinclude coc-status"
 
 for coc in $CocPlugins ; do
     pr_info "\tInstalling Coc plugin $coc"
-    nvim +"CocInstall $coc" +qa
+    nvim --headless +"CocInstall $coc" +qa
 done
 
 pr_info "Updating Black ..."
-nvim +BlackUpgrade +qa
+nvim --headless +BlackUpgrade +qa
 
 pr_pass "Install complete"
