--- a/_upkg/install
+++ b/_upkg/install
@@ -15,7 +15,7 @@ export THIS_DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
 
 pr_info "Creating the new ${NVIM_INIT}"
 export PKGS_NVIM_DIR="$(dirname $THIS_DIR/)/nvim"
-echo "set runtimepath+=$PKGS_NVIM_DIR" > "$NVIM_INIT"
+#echo "set runtimepath+=$PKGS_NVIM_DIR" > "$NVIM_INIT"
 echo "source $PKGS_NVIM_DIR/init.vim" >> "$NVIM_INIT"
 echo "source $PKGS_NVIM_DIR/ginit.vim" >> "${NVIM_GINIT}"
 
