--- a/_upkg/install
+++ b/_upkg/install
@@ -38,8 +38,7 @@ pr_info "Installing Coc plugins ..."
 CocPlugins="coc-ultisnips coc-python coc-json coc-javascript \
     coc-tslint coc-eslint coc-css coc-sources coc-neco \
     coc-tsserver coc-git coc-yank coc-svg coc-vimlsp coc-xml \
-    coc-tabnine coc-highlight coc-java coc-neoinclude coc-status \
-    coc-fzf-preview"
+    coc-tabnine coc-highlight coc-java coc-neoinclude coc-status"
 
 for coc in $CocPlugins ; do
     pr_info "\tInstalling Coc plugin $coc"
