--- a/_upkg/install
+++ b/_upkg/install
@@ -34,16 +34,16 @@ wait
 # npm install -g instant-markdown-d
 # wait
 
-pr_info "Installing Coc plugins ..."
-CocPlugins="coc-ultisnips coc-python coc-json coc-javascript \
-    coc-tslint coc-eslint coc-css coc-sources coc-neco \
-    coc-tsserver coc-git coc-yank coc-svg coc-vimlsp coc-xml \
-    coc-highlight coc-java coc-neoinclude coc-status"
+# pr_info "Installing Coc plugins ..."
+# CocPlugins="coc-ultisnips coc-python coc-json coc-javascript \
+#     coc-tslint coc-eslint coc-css coc-sources coc-neco \
+#     coc-tsserver coc-git coc-yank coc-svg coc-vimlsp coc-xml \
+#     coc-highlight coc-java coc-neoinclude coc-status"
 
-for coc in $CocPlugins ; do
-    pr_info "\tInstalling Coc plugin $coc"
-    nvim --headless +"CocInstall $coc" +qa
-done
+# for coc in $CocPlugins ; do
+#     pr_info "\tInstalling Coc plugin $coc"
+#     nvim --headless +"CocInstall $coc" +qa
+# done
 
 pr_info "Updating Black ..."
 nvim --headless +BlackUpgrade +qa
