--- a/_upkg/install
+++ b/_upkg/install
@@ -4,13 +4,15 @@ source pkgs.sh
 source nvimenv.sh
 source vim_plug.sh
 
+
 # Link our UltiSnips up
 ln -nsf ${THIS_DIR}/../nvim/UltiSnips "$NVIM_HOME/"
 
-export THIS_DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
+mkdir -p "$(dirname ${NVIM_INIT})"
 
-pr_info "Creating the new ${NVIM_INIT}"
 export PKGS_NVIM_DIR="$(dirname $THIS_DIR/)/nvim"
+pr_info "Creating the new ${NVIM_INIT} whith ${PKGS_NVIM_DIR}"
+
 echo "set runtimepath+=$PKGS_NVIM_DIR" > "$NVIM_INIT"
 echo "source $PKGS_NVIM_DIR/init.vim" >> "$NVIM_INIT"
 echo "source $PKGS_NVIM_DIR/ginit.vim" >> "${NVIM_GINIT}"
